--- a/bricks/form/src/radio/index.shadow.css
+++ b/bricks/form/src/radio/index.shadow.css
@@ -69,7 +69,11 @@
   border-top-width: 1.02px;
   border-left-width: 0;
   cursor: pointer;
-  transition: color 0.3s, background 0.3s, border-color 0.3s, box-shadow 0.3s;
+  transition:
+    color 0.3s,
+    background 0.3s,
+    border-color 0.3s,
+    box-shadow 0.3s;
 }
 .buttonContent {
   display: inline-block;
@@ -199,20 +203,6 @@
   transform: translateY(-50%);
 }
 
-.buttonRadioCheck::before,
-.buttonRadio:has(.buttonRadioCheck):after {
-  position: absolute;
-  top: 50%;
-  left: 0px;
-  display: block;
-  box-sizing: content-box;
-  width: 1px;
-  height: calc(100% - 8px);
-  background-color: var(--antd-dashboard-radio-item-checked-border-color);
-  transition: background-color 0.3s;
-  content: "";
-  transform: translateY(-50%);
-}
 .dashboardRadioContainer .buttonContent:not(.disabledButtonRadio):hover {
   color: var(--antd-dashboard-radio-item-checked-color);
 }
