--- a/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  --menu-item-icon-size: 20px;
 }
 
 :host([hidden]) {
@@ -35,9 +36,9 @@ eo-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 20px;
-  height: 20px;
-  font-size: 20px;
+  width: var(--menu-item-icon-size);
+  height: var(--menu-item-icon-size);
+  font-size: var(--menu-item-icon-size);
   color: rgb(87, 104, 156);
 }
 
@@ -62,9 +63,17 @@ eo-link {
   box-shadow: 0px 2px 12px 0px rgba(26, 122, 255, 0.30196);
 }
 
+:host([selected]) .menu-item-icon-container {
+  color: var(--color-normal-icon);
+}
+
+:host([selected]) .menu-item:hover {
+  background: var(--color-brand-hover);
+}
+
 /* menu-collapsed */
 :host([menu-collapsed]) .menu-item {
-  padding: 10px calc(50% - 8px);
+  padding: 10px calc(50% - var(--menu-item-icon-size) / 2);
 }
 
 :host([menu-collapsed]) .menu-item-text {
