--- a/bricks/basic/src/sidebar/sidebar-menu-submenu/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-submenu/styles.shadow.css
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  --menu-item-icon-size: 20px;
 }
 
 :host([hidden]) {
@@ -32,9 +33,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 20px;
-  height: 20px;
-  font-size: 20px;
+  width: var(--menu-item-icon-size);
+  height: var(--menu-item-icon-size);
+  font-size: var(--menu-item-icon-size);
   color: rgb(87, 104, 156);
 }
 
@@ -114,7 +115,7 @@
 
 /* menu-collapsed */
 :host([menu-collapsed]) .menu-submenu-title {
-  padding: 10px calc(50% - 8px);
+  padding: 10px calc(50% - var(--menu-item-icon-size) / 2);
 }
 
 :host([menu-collapsed]) .menu-submenu-title-text {
