feat(): icon support imgSrc
Closes AGILE-1374

--- a/bricks/icons/src/general-icon/styles.shadow.css
+++ b/bricks/icons/src/general-icon/styles.shadow.css
@@ -12,7 +12,11 @@
 
 :host > icons\.antd-icon,
 :host > icons\.easyops-icon,
-:host > icons\.fa-icon {
+:host > icons\.fa-icon,
+:host > eo-antd-icon,
+:host > eo-easyops-icon,
+:host > eo-fa-icon,
+:host > eo-img-icon {
   display: block;
 }
 
