feat(): update Style

--- a/bricks/advanced/src/table/table.shadow.css
+++ b/bricks/advanced/src/table/table.shadow.css
@@ -94,3 +94,7 @@ td.alignBottom {
   font-weight: 500;
   color: var(--antd-table-header-color);
 }
+
+.ant-table-wrapper .ant-table-pagination.ant-pagination {
+  margin: 24px 0;
+}
