--- a/bricks/basic/src/data-providers/apply-ui-version/css/ui-v8-2.css
+++ b/bricks/basic/src/data-providers/apply-ui-version/css/ui-v8-2.css
@@ -1,7 +1,19 @@
+/* common */
+body.ui-v8-2 {
+  --page-title-padding: 0 24px;
+  --page-title-margin-bottom: 16px;
+  --page-content-padding: 16px 24px;
+  --page-content-padding-top-with-wide-line: 5px;
+
+  --wide-color: "#F4F6F9";
+}
+
+/* light */
 html[data-theme="light"] body.ui-v8-2 {
   --body-background: #ffffff;
 }
 
+/* dark */
 html[data-theme="dark"] body.ui-v8-2,
 html[data-theme="dark-v2"] body.ui-v8-2 {
   --body-background: #29292d;
