--- a/bricks/basic/src/data-providers/apply-ui-version/css/ui-v8.css
+++ b/bricks/basic/src/data-providers/apply-ui-version/css/ui-v8.css
@@ -1,7 +1,19 @@
+/* commomn */
+body.ui-v8 {
+  --page-title-padding: 0 20px;
+  --page-title-margin-bottom: 18px;
+  --page-content-padding: 20px;
+  --page-content-padding-top-with-wide-line: 5px;
+
+  --wide-color: "#F4F6F9";
+}
+
+/* light */
 html[data-theme="light"] body.ui-v8 {
   --body-background: #f3f4f7;
 }
 
+/* dark */
 html[data-theme="dark"] body.ui-v8,
 html[data-theme="dark-v2"] body.ui-v8 {
   --body-background: #29292d;
