--- a/bricks/containers/src/category/category.shadow.css
+++ b/bricks/containers/src/category/category.shadow.css
@@ -12,7 +12,7 @@
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-  width: calc(100% - 40px);
+  width: 100%;
   height: 1px;
   background: var(--color-text-divider-line);
 }
