--- a/bricks/containers/src/tab/tab-group/tab.shadow.css
+++ b/bricks/containers/src/tab/tab-group/tab.shadow.css
@@ -3,8 +3,7 @@
 }
 
 .tab-wrapper.show-card {
-  /* background: var(--antd-tabs-title-wrapper-bg); */
-  box-shadow: var(--antd-tabs-shadow);
+  box-shadow: var(--tab-shadow);
 }
 
 .tab-nav {
@@ -13,7 +12,7 @@
   grid-auto-flow: column;
   justify-content: space-between;
   align-items: center;
-  padding: 0 16px;
+  padding: var(--tab-header-padding);
   background: var(--antd-tabs-title-wrapper-bg);
 }
 
