--- a/bricks/basic/src/sidebar-sub-menu/styles.shadow.css
+++ b/bricks/basic/src/sidebar-sub-menu/styles.shadow.css
@@ -8,7 +8,7 @@
 
 .menu-container {
   box-sizing: border-box;
-  background: var(--color-fill-global-bg-1);
+  background: var(--sidebar-bg);
   border: 1px solid var(--stroke-color-default);
   border-left: 0;
   border-radius: 0px;
