--- a/bricks/basic/src/sidebar/styles.shadow.css
+++ b/bricks/basic/src/sidebar/styles.shadow.css
@@ -1,9 +1,13 @@
 :host {
-  display: inline-block;
+  display: block;
 }
 
 :host([hidden]) {
   display: none;
+}
+
+:host([static-position]) {
+  height: 100%;
 }
 
 *,
@@ -13,20 +17,35 @@
 }
 
 .sidebar-container {
-  position: fixed;
-  left: 0px;
-  top: var(--app-bar-height);
+  position: relative;
   z-index: 999;
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - var(--app-bar-height) + 1px - 0px);
-  border-right: 1px solid;
-  border-image: var(--v8-left-sidebar-border-right) 1;
+  height: 100%;
+}
+
+.sidebar-container,
+.inner {
   transition: all var(--side-bar-collapse-transition-duration)
     var(--side-bar-collapse-transition-timing-function);
 }
 
-.sidebar-container::before {
+:host(:not([static-position])) .sidebar-container {
+  position: fixed;
+  left: 0;
+  top: var(--app-bar-height);
+  height: calc(100vh - var(--app-bar-height));
+}
+
+.inner {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid;
+  border-image: var(--v8-left-sidebar-border-right) 1;
+}
+
+.inner::before {
   content: "";
   position: absolute;
   left: 0;
