--- a/bricks/containers/src/banner/styles.shadow.css
+++ b/bricks/containers/src/banner/styles.shadow.css
@@ -1,9 +1,20 @@
 :host {
+  --banner-padding-horizontal: 60px;
+  --banner-padding-vertical: 44px;
+  --banner-title-color: #57689c;
+  --banner-desc-color: #3c4875;
+
   display: block;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 50px;
+  padding: var(--banner-padding-vertical) var(--banner-padding-horizontal);
+}
+
+:host-context(html[data-theme="dark-v2"]),
+:host-context([data-override-theme="dark-v2"]) {
+  --banner-title-color: rgba(255, 255, 255, 0.85);
+  --banner-desc-color: rgba(255, 255, 255, 0.65);
 }
 
 :host([hidden]) {
@@ -21,13 +32,13 @@
 }
 
 .title-and-desc {
-  gap: 20px;
+  gap: 14px;
 }
 
 .page-title {
-  color: #57689c;
+  color: var(--banner-title-color);
 }
 
 .page-desc {
-  color: #3c4875;
+  color: var(--banner-desc-color);
 }
