--- a/bricks/containers/src/page-view/styles.shadow.css
+++ b/bricks/containers/src/page-view/styles.shadow.css
@@ -8,26 +8,29 @@
   display: none;
 }
 
-.header {
-  overflow: hidden;
+.header,
+.main {
   min-height: 0;
 }
 
 .main {
-  overflow: hidden;
   flex-grow: 1;
   display: flex;
 }
 
 .sidebar,
-.sub-sidebar {
+.sub-sidebar,
+.content {
   min-width: 0;
 }
 
-.content {
-  overflow: hidden auto;
+.header,
+.sidebar,
+.sub-sidebar {
+  flex-shrink: 0;
 }
 
 .content {
   flex-grow: 1;
+  overflow: auto;
 }
