--- a/bricks/basic/src/sidebar-sub-menu/styles.shadow.css
+++ b/bricks/basic/src/sidebar-sub-menu/styles.shadow.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   background: var(--sidebar-bg);
   border: 1px solid var(--stroke-color-default);
-  border-left: 0;
+  border-width: 0 1px 0 0;
   border-radius: 0px;
   padding: 20px 0px;
   height: 100%;
