--- a/bricks/containers/src/main-view/styles.shadow.css
+++ b/bricks/containers/src/main-view/styles.shadow.css
@@ -7,6 +7,7 @@
   gap: var(--card-content-gap);
   padding: var(--page-padding-top) var(--page-padding-right)
     var(--page-padding-bottom) var(--page-padding-left);
+  position: relative;
 }
 
 :host([hidden]) {
@@ -46,6 +47,13 @@ eo-banner {
   display: none;
 }
 
+.toolbar,
+.footer > eo-narrow-view {
+  display: flex;
+  align-items: center;
+  gap: var(--toolbar-button-gap);
+}
+
 :host([banner-sunk]) {
   gap: 0;
 }
@@ -65,4 +73,27 @@ eo-banner {
 :host([fill-container]) .content {
   flex-grow: 1;
   min-height: 0;
+}
+
+.footer {
+  display: none;
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  background: var(--color-fill-global-bg-2);
+  /* box-shadow: 0px -4px 16px 0px rgba(0,0,0,0.08); */
+  box-shadow: var(--slide-up-shadow);
+  margin-left: calc(-1 * var(--page-padding-left));
+  margin-right: calc(-1 * var(--page-padding-right));
+  margin-bottom: calc(-1 * var(--page-padding-bottom));
+  padding-left: var(--page-padding-left);
+  padding-right: var(--page-padding-right);
+}
+
+.footer > eo-narrow-view {
+  padding: 20px 0;
+}
+
+:host([show-footer]) .footer {
+  display: block;
 }
