fix(): fix absolute app-bar

--- a/bricks/basic/src/app-bar-wrapper/styles.shadow.css
+++ b/bricks/basic/src/app-bar-wrapper/styles.shadow.css
@@ -27,6 +27,10 @@
   position: fixed;
 }
 
+.app-bar.absolute {
+  position: absolute;
+}
+
 .app-bar-content {
   display: flex;
   justify-content: space-between;
