--- a/bricks/containers/src/card/card.shadow.css
+++ b/bricks/containers/src/card/card.shadow.css
@@ -1,3 +1,32 @@
+:host {
+  --card-border-radius: 6px;
+  --card-border-color: none;
+  --card-box-shadow: none;
+}
+
+:host-context(html[data-ui="v8-2"]) {
+  --card-border-radius: 0;
+
+  /* In UI v8.2, these outlined cards do have horizontal padding */
+  &:host([outline="border"]),
+  &:host([outline="shadow"]),
+  &:host([outline="background"]) {
+    --card-head-padding: var(--card-head-padding-vertical)
+      var(--card-head-padding-horizontal-base);
+    --card-body-padding: var(--card-body-padding-vertical)
+      var(--card-head-padding-horizontal-base);
+    --card-border-radius: 6px;
+  }
+}
+
+:host([outline="border"]) {
+  --card-border-color: 1px solid var(--color-text-divider-line);
+}
+
+:host([outline="shadow"]) {
+  --card-box-shadow: var(--connected-overlay-shadow);
+}
+
 .card {
   box-sizing: border-box;
   margin: 0;
@@ -10,11 +39,9 @@
   font-feature-settings: "tnum";
   position: relative;
   background: var(--antd-card-background);
-  border-radius: 6px;
-}
-
-:host-context(body.ui-v8-2) .card.compactCardContainer {
-  border-radius: 0;
+  border: var(--card-border-color);
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--card-box-shadow);
 }
 
 .card-head {
@@ -23,7 +50,6 @@
   color: var(--antd-heading-color);
   font-weight: 500;
   font-size: 16px;
-  background: transparent;
   border-bottom: 1px solid var(--card-border-color-split);
 }
 
@@ -60,15 +86,4 @@
   display: table;
   clear: both;
   content: "";
-}
-.card-footer {
-  width: 100%;
-  box-shadow: var(--card-footer-shadow);
-  position: absolute;
-  padding: var(--card-footer-padding);
-  left: 0;
-  bottom: 0;
-  box-sizing: border-box;
-  background: var(--antd-card-footer-bg);
-  z-index: 998;
 }
