--- a/bricks/containers/src/tab/tab-group/tab.shadow.css
+++ b/bricks/containers/src/tab/tab-group/tab.shadow.css
@@ -1,5 +1,7 @@
-:host,
-:host-context(html[data-ui="v8-2"]):host([outline="shadow"]) {
+:host(:not([type="panel"])),
+:host-context(html[data-ui="v8-2"]):host(
+    [outline="shadow"]:not([type="panel"])
+  ) {
   --local-tabs-border-radius: var(--tabs-outlined-border-radius);
   --local-tabs-header-padding: var(--tabs-outlined-header-padding);
   --local-tabs-content-padding: var(--tabs-outlined-content-padding);
@@ -7,6 +9,7 @@
   --local-tabs-shadow: var(--tabs-outlined-shadow);
 }
 
+:host([type="panel"]),
 :host([outline="none"]),
 :host-context(html[data-ui="v8-2"]) {
   --local-tabs-border-radius: 0;
@@ -40,7 +43,7 @@
   border-bottom: 1px solid var(--antd-tabs-title-border-color);
 }
 
-.tab-nav.panel {
+:host([type="panel"]) .tab-nav {
   padding: 0;
   border-left: 1px solid var(--antd-tabs-title-border-color);
   background: var(--antd-component-background);
@@ -51,7 +54,7 @@
   margin-right: 12px;
 }
 
-.tab-nav:not(.panel) .tab-item-wrapper {
+:host(:not([type="panel"])) .tab-item-wrapper {
   gap: 20px;
 }
 
