--- a/bricks/basic/src/link/link.shadow.css
+++ b/bricks/basic/src/link/link.shadow.css
@@ -17,7 +17,7 @@ a {
 }
 
 .link {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   color: var(--antd-btn-link-color);
 }
@@ -65,4 +65,9 @@ a {
 
 eo-icon {
   line-height: 1em;
+}
+
+.external-icon {
+  margin-left: 6px;
+  color: var(--color-disabled-text);
 }
