--- a/bricks/containers/src/category/category.shadow.css
+++ b/bricks/containers/src/category/category.shadow.css
@@ -4,16 +4,25 @@
 
 .category-item {
   position: relative;
+  padding: var(--category-item-padding);
 }
 
-.category-item:not(:last-child)::before {
+.category-item:first-child {
+  padding-top: 0px;
+}
+
+.category-item:last-child {
+  padding-bottom: 0px;
+}
+
+:host([split]) .category-item:not(:last-child)::before {
   content: "";
   position: absolute;
-  left: 50%;
+  left: 0;
+  right: 0;
   bottom: 0;
-  transform: translateX(-50%);
-  width: 100%;
   height: 1px;
+  margin: var(--category-split-margin);
   background: var(--color-text-divider-line);
 }
 
@@ -21,7 +30,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 32px 20px 0 20px;
+  padding: var(--category-header-padding);
 }
 
 .category-left-wrap {
@@ -35,20 +44,16 @@
   height: 16px;
   background: var(--color-brand);
   border-radius: 2px;
-  margin-right: 8px;
+  margin-right: 6px;
 }
 
 .header-title {
   font-size: var(--card-title-font-size);
-  font-family:
-    PingFangSC-Medium,
-    PingFang SC;
   font-weight: var(--font-weight-500);
   color: var(--color-header-text);
   line-height: 24px;
 }
 
 .category-item-content {
-  /* overflow: hidden; */
-  padding: 24px 20px 24px 31px;
+  padding: var(--category-content-padding);
 }
