--- a/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
@@ -22,7 +22,7 @@ eo-link {
   display: flex;
   align-items: center;
   min-height: 36px;
-  padding: 10px 12px;
+  padding: 8px 12px;
   line-height: 20px;
   color: var(--v8-left-sidebar-item-normal);
   border-radius: var(--larger-border-radius);
@@ -45,6 +45,7 @@ eo-link {
 .menu-item-text {
   flex: 1;
   margin-left: 14px;
+  margin-right: 12px;
   font-size: 14px;
   overflow: hidden;
   white-space: nowrap;
