--- a/bricks/basic/src/menu-group/styles.shadow.css
+++ b/bricks/basic/src/menu-group/styles.shadow.css
@@ -10,5 +10,6 @@
   line-height: 1.5;
   padding: 8px;
   font-size: var(--sub-title-font-size);
-  color: var(--antd-text-color-secondary);
+  color: var(--color-secondary-text);
+  font-weight: var(--font-weight-400);
 }
