--- a/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
@@ -24,7 +24,7 @@ eo-link {
   min-height: 36px;
   padding: 8px 12px;
   line-height: 20px;
-  color: var(--v8-left-sidebar-item-normal);
+  color: var(--left-sidebar-item-normal-color);
   border-radius: var(--larger-border-radius);
   cursor: pointer;
   transition: all var(--side-bar-collapse-transition-duration)
@@ -55,21 +55,21 @@ eo-link {
 
 /* hover & active */
 .menu-item:hover {
-  background: var(--v8-top-menu-item-hover);
+  background: var(--left-sidebar-item-hover-bg);
 }
 
 :host([selected]) .menu-item {
-  color: var(--color-normal-icon);
-  background: var(--color-brand);
+  color: var(--left-sidebar-item-selected-color);
+  background: var(--left-sidebar-item-selected-bg);
   box-shadow: 0px 2px 12px 0px rgba(26, 122, 255, 0.30196);
 }
 
 :host([selected]) .menu-item-icon-container {
-  color: var(--color-normal-icon);
+  color: var(--left-sidebar-item-selected-color);
 }
 
 :host([selected]) .menu-item:hover {
-  background: var(--color-brand-hover);
+  background-color: var(--left-sidebar-item-selected-hover-bg);
 }
 
 /* menu-collapsed */
