fix(main-view): show footer shadow only when it's pinned

--- a/bricks/containers/src/main-view/styles.shadow.css
+++ b/bricks/containers/src/main-view/styles.shadow.css
@@ -80,14 +80,17 @@ eo-banner {
   position: sticky;
   bottom: 0;
   width: 100%;
-  background: var(--color-fill-global-bg-2);
-  /* box-shadow: 0px -4px 16px 0px rgba(0,0,0,0.08); */
-  box-shadow: var(--slide-up-shadow);
   margin-left: calc(-1 * var(--page-padding-left));
   margin-right: calc(-1 * var(--page-padding-right));
   margin-bottom: calc(-1 * var(--page-padding-bottom));
   padding-left: var(--page-padding-left);
   padding-right: var(--page-padding-right);
+}
+
+.pinned {
+  background: var(--color-fill-global-bg-2);
+  /* box-shadow: 0px -4px 16px 0px rgba(0,0,0,0.08); */
+  box-shadow: var(--slide-up-shadow);
 }
 
 .footer > eo-narrow-view {
